fix placeholder in textarea and add new placeholder, first try displaying links in email properly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     volumes:
       - rails-assets:/helpy/public
     env_file: docker/.env
-    #environment:
-    #  - DO_NOT_PREPARE=true
+    environment:
+      - DO_NOT_PREPARE=true
     depends_on:
       - postgres
     ports:
